syntax = "proto3";

package event;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "./;pb";

service EventService {
  rpc CreateEvent(EventRequest) returns (EventResponse) {}
  rpc GetEvents(google.protobuf.Empty) returns (EventResponses) {}
  rpc GetEvent(EventId) returns (EventResponse) {}
  rpc UpdateEvent(UpdateEventRequest) returns (EventResponse) {}
  rpc DeleteEvent(EventId) returns (google.protobuf.Empty) {}
}

message EventId {
  int64 id = 1;
}

message EventRequest {
  string title = 1 [(validate.rules).string = {min_len: 2, max_len: 30}];
  string description = 2 [(validate.rules).string = {ignore_empty: true, min_len: 5, max_len: 150}];
  google.protobuf.Timestamp datetime = 3 [(validate.rules).timestamp.required = true];
  google.protobuf.Duration duration = 4 [(validate.rules).duration.required = true];
  string user_id = 5 [(validate.rules).string.uuid = true];
  google.protobuf.Duration notify_before = 6;
}

message UpdateEventRequest {
  int64 id = 1;
  EventRequest event = 2;
}

message EventResponse {
  int64 id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp datetime = 4;
  google.protobuf.Duration duration = 5;
  string user_id = 6;
  google.protobuf.Duration notify_before = 7;
}

message EventResponses {
  repeated EventResponse events = 1;
}
